--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <input type="password" id="password" name="password" class="input-field" onkeyup="validar(this)">
             <div id="error_password" class="error-message"></div>
             </div>
-            <button type="submit" class="submit-button" onclick="registrarse()">Registrarse</button>
+            <button type="submit" class="submit-button" onclick="enviarFormulario()">Registrarse</button>
         </form>
         <div id="mensaje">  </div>
 
