--- a/index.html
+++ b/index.html
@@ -5,64 +5,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo1.css">
-    <title> DOM JS</title>
+    <title>DOM JS</title>
 </head>
 
 <body>
-    </header>
-
     <section class="formulario">
-        <form action=""  name="form_registro" onsubmit="registrarse(); return false;">
-            <h1 class="formulario" id="titulo"> Registrate en TuSitio.com🚀</h1>
+        <form name="form_registro">
+            <h1 class="formulario" id="titulo">Registrate en TuSitio.com🚀</h1>
             <div>
-            <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" name="nombre" class="input-field" onkeyup="validar(this)">
-            <div id="error_nombre" class="error-message"></div>
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre" name="nombre" class="input-field">
+                <div id="error_nombre" class="error-message"></div>
             </div>
             <div>
-            <label for="apellido">Apellido</label>
-            <input type="text" id="apellido" name="apellido" class="input-field" onkeyup="validar(this)">
-            <div id="error_apellido" class="error-message"></div>
+                <label for="apellido">Apellido</label>
+                <input type="text" id="apellido" name="apellido" class="input-field">
+                <div id="error_apellido" class="error-message"></div>
             </div>
             <label for="telefono">Telefono</label>
-            <input type="tel" id="telefono" name="telefono" class="input-field" onkeyup="validarTelefono(this)">
+            <input type="tel" id="telefono" name="telefono" class="input-field">
             <div id="error_telefono" class="error-message"></div>
+            <div>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" class="input-field">
+                <div id="error_email" class="error-message"></div>
             </div>
             <div>
-            <label for="email">Email</label>
-            <input type="text" id="email" name="email" class="input-field" onkeyup="validarEmail(this)">
-            <div id="error_email" class="error-message"></div>
+                <label for="consulta">Tipo de Consulta</label>
+                <select id="consulta" name="consulta" class="input-field">
+                    <option value="" selected disabled>Seleccione una opción</option>
+                    <option value="Soporte">Soporte</option>
+                    <option value="Ventas">Ventas</option>
+                </select>
+                <div id="error_consulta" class="error-message"></div>
             </div>
             <div>
-            <label for="consulta">Tipo de Consulta</label>
-            <select id="consulta" name="consulta" class="input-field" onchange="validar(this)">
-            <option value="" selected disabled>Seleccione una opción</option>
-            <option value="Soporte">Soporte</option>
-            <option value="Ventas">Ventas</option>
-            </select>
-            <div id="error_consulta" class="error-message"></div>
+                <label for="asunto">Asunto </label>
+                <input type="text" id="asunto" name="asunto" class="input-field">
+                <div id="error_asunto" class="error-message"></div>
             </div>
             <div>
-            <label for="asunto">Asunto </label>
-            <input type="text" id="asunto" name="asunto" class="input-field" onkeyup="validar(this)">
-            <div id="error_asunto" class="error-message"></div>
+                <label for="descripcion">Describe </label>
+                <textarea id="descripcion" name="descripcion" class="input-field" maxlength="200"></textarea>
+                <div id="error_descripcion" class="error-message"></div>
             </div>
             <div>
-            <label for="descripcion"> Describe </label>
-            <textarea id="descripcion" name="descripcion" class="input-field" oninput="validar(this)" maxlength="200"></textarea>
-            <div id="error_descripcion" class="error-message"></div>
+                <label for="password">Contraseña</label>
+                <input type="password" id="password" name="password" class="input-field">
+                <div id="error_password" class="error-message"></div>
             </div>
-            <div>
-            <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" class="input-field" onkeyup="validar(this)">
-            <div id="error_password" class="error-message"></div>
-            </div>
-            <button type="submit" class="submit-button" onclick="registrarse()">Registrarse</button>
+            <button type="submit" class="submit-button">Registrarse</button>
         </form>
-        <div id="mensaje">  </div>
-
-</section>
-
+        <div id="mensaje"></div>
+    </section>
 
     <script src="main.js"></script>
 </body>
